Kubernetes/CKA/Networking/Ingress/Lab-2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/rewrite-target":"/"},"creationTimestamp":"2024-12-08T10:05:02Z","generation":1,"name":"wear-watch","namespace":"app-space","resourceVersion":"3676","uid":"75d796c6-2864-4949-878f-ed0b780a1f81"},"spec":{"rules":[{"http":{"paths":[{"backend":{"service":{"name":"wear-service","port":{"number":8080}}},"path":"/wear","pathType":"Prefix"},{"backend":{"service":{"name":"video-service","po [...]
    nginx.ingress.kubernetes.io/rewrite-target: /
  creationTimestamp: "2024-12-08T10:05:02Z"
  generation: 1
  name: wear-watch
  namespace: app-space
  resourceVersion: "3939"
  uid: 75d796c6-2864-4949-878f-ed0b780a1f81
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: wear-service
            port:
              number: 8080
        path: /wear
        pathType: Prefix
      - backend:
          service:
            name: video-service
            port:
              number: 8080
        path: /watch
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 172.20.75.60
